--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ html, body{
 
 .container{
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 20vh 70vh 10vh;
-    grid-template-areas:"h h"
-                        "m a"
-                        "f f";
+    grid-template-columns: 1fr;
+    grid-template-rows: 20vh 50vh 20vh 10vh;
+    grid-template-areas:"h"
+                        "m"
+                        "a"
+                        "f";
 }
+
 header{
     background-color: yellow;
 
@@ -41,3 +43,26 @@ footer{
    /* grid-column: 1/3; shorthand */
    grid-area: f;
 } 
+
+@media screen and (min-width: 769px){
+    .container{
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-template-rows: 20vh 70vh 10vh;
+        grid-template-areas:"h h"
+                            "m a"
+                            "f f";
+    }
+}
+
+
+
+
+
+/* breakpoints
+    300px - 479px = smartphones
+    480px - 768px  = tablets
+    769px - 1024px = telas menores, notbooks
+    1025px - 1200px = desktop
+    1201 - + = telas maiores, tv's
+*/
